[project]
name = "mine-microgrid-simulator"
version = "0.1.0"
description = "Streamlit + Plotly 的微电网规划与分析平台"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Phoenix0531-sudo" }]
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "windpowerlib>=0.2.1",
    "pvlib>=0.10.0",
    "requests>=2.28.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
